--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.25.0  # Replace with the latest compatible version of Streamlit
-numpy==1.25.2      # Replace with the version compatible with your environment
-pandas==1.5.3      # Replace with the version compatible with your environment
-scikit-learn==1.3.1  # For TfidfVectorizer and XGBoost integration
-xgboost==1.7.6     # Replace with the version compatible with your model
-tensorflow==2.12.0 # Optional, if you still need TensorFlow for other purposes
-pyspellchecker==0.7.2  # For the spellchecker functionality
+streamlit
+numpy
+pandas
+scikit-learn
+xgboost
+tensorflow
+pyspellchecker
 nltk
 matplotlib
 seaborn
